job titles update

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <!-- Header Start -->
                 <div class="header" id="header">
                     <div class="content-inner">
-                        <p>I'm</p>
+                        <p>I'm a</p>
                         <h1>Idriss Bakayoko</h1>
                         <h2></h2>
-                        <div class="typed-text">Linux Engineer, Cloud Engineer, DevOps Engineer, Terraform Engineer, Apps Deployment</div>
+                        <div class="typed-text">Linux Engineer, Cloud Engineer, DevOps Engineer, Terraform Engineer</div>
                     </div>
                 </div>
                 <!-- Header End -->
